fixed layout issues with images

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -4,7 +4,6 @@
 
 * {
   font-family: "Inter", sans-serif;
-  box-sizing: border-box;
 }
 
 @media screen and (min-width: 480px) {
